# teste

perfomance-payment/: pyproject.toml  rota_usuario.py  test_suite.py  teste_bnpl_3_failures.csv  teste_bnpl_3_stats.csv
